--- a/apps/pv_opt/config/config.yaml
+++ b/apps/pv_opt/config/config.yaml
@@ -147,7 +147,7 @@ pv_opt:
   # If you have a Zappi Charger, uncomment next line to allow Pv_opt to detect car plugin status
   # for use with the Octopus Intelligent Tariff and to allow EV consumption data to be read (if needed). 
   #
-  # ev_charger: Zappi   # Default = None
+  ev_charger: Zappi   # Default = None
   #
   # By default, Zappi is set to seen as part of the house load to prevent house battery discharge during car charging and allow discounting of EV consumption
   # from house charging calculations. 
