Config.yaml - change HA types for SolarmanV2
Change "sensor" to "time" and "number" to match entity types provided by integration described by Solarman_V2

--- a/apps/pv_opt/config/config.yaml
+++ b/apps/pv_opt/config/config.yaml
@@ -291,13 +291,13 @@ pv_opt:
 
   # id_daily_solar: sensor.{device_name}_today_production
 
-  # id_timed_charge_start: sensor.{device_name}_timed_charge_start
-  # id_timed_charge_end: sensor.{device_name}_timed_charge_end
-  # id_timed_charge_current: sensor.{device_name}_timed_charge_current
+  # id_timed_charge_start: time.{device_name}_timed_charge_start
+  # id_timed_charge_end: time.{device_name}_timed_charge_end
+  # id_timed_charge_current: number.{device_name}_timed_charge_current
 
-  # id_timed_discharge_start: sensor.{device_name}_timed_discharge_start
-  # id_timed_discharge_end: sensor.{device_name}_timed_discharge_end
-  # id_timed_discharge_current: sensor.{device_name}_timed_discharge_current
+  # id_timed_discharge_start: time.{device_name}_timed_discharge_start
+  # id_timed_discharge_end: time.{device_name}_timed_discharge_end
+  # id_timed_discharge_current: number.{device_name}_timed_discharge_current
 
   # id_inverter_mode: sensor.{device_name}_storage_control_mode
 
