Reinstantiate charge start/end ids in hours and minutes
config.yaml: Reinstantiate charge start/end ids in hours and minutes

solis.py: fix typos introduced on last edits

--- a/apps/pv_opt/config/config.yaml
+++ b/apps/pv_opt/config/config.yaml
@@ -293,10 +293,22 @@ pv_opt:
 
   # id_timed_charge_start: time.{device_name}_timed_charge_start
   # id_timed_charge_end: time.{device_name}_timed_charge_end
+
+  # id_timed_charge_start_hours: number.{device_name}_timed_charge_start_hours
+  # id_timed_charge_start_minutes: number.{device_name}_timed_charge_start_minutes
+  # id_timed_charge_end_hours: number.{device_name}_timed_charge_end_hours
+  # id_timed_charge_end_minutes: number.{device_name}_timed_charge_end_minutes
+
   # id_timed_charge_current: number.{device_name}_timed_charge_current
 
   # id_timed_discharge_start: time.{device_name}_timed_discharge_start
   # id_timed_discharge_end: time.{device_name}_timed_discharge_end
+
+  # id_timed_discharge_start_hours: number.{device_name}_timed_discharge_start_hours
+  # id_timed_discharge_start_minutes: number.{device_name}_timed_discharge_start_minutes
+  # id_timed_discharge_end_hours: number.{device_name}_timed_discharge_end_hours
+  # id_timed_discharge_end_minutes: number.{device_name}_timed_discharge_end_minutes
+
   # id_timed_discharge_current: number.{device_name}_timed_discharge_current
 
   # id_inverter_mode: sensor.{device_name}_storage_control_mode
