Solarman integration - change modbus writes to entity writes
The service calls for modbus writes  on the new Solarman repo require device_ids, which are difficult to illicit from HA automatically. Instead, change all modbus writes for the Solarman_V2 integration to entity writes. Actual final writes remain commented out.

Remove the test write from Pv_opt.py.

--- a/apps/pv_opt/config/config.yaml
+++ b/apps/pv_opt/config/config.yaml
@@ -311,7 +311,7 @@ pv_opt:
 
   # id_timed_discharge_current: number.{device_name}_timed_discharge_current
 
-  # id_inverter_mode: sensor.{device_name}_storage_control_mode
+  # id_inverter_mode: select.{device_name}_storage_control_mode
 
 
   # The following do not have defaults stored within Pv_opt so require uncommenting if used:
