solis.py, change to INVERTER_DEFS for Solarman
solis.py: Change inverter_defs to use combined hours/minutes entities that Solarman_V2 provides.

solis_hybrid.yaml: update register 33132 to match 43110.

--- a/apps/pv_opt/solis_hybrid.yaml
+++ b/apps/pv_opt/solis_hybrid.yaml
@@ -347,6 +347,8 @@ parameters:
             value: "Off-Grid Storage"
           - key: 0x28
             value: "Battery Wake-Up"
+          - key: 0x31
+            value: "Backup/Reserve"
           - key: 0x60
             value: "Feed-In Priority"
 
