--- a/apps/pv_opt/config/config.yaml
+++ b/apps/pv_opt/config/config.yaml
@@ -318,39 +318,26 @@ pv_opt:
 
   inverter_type: SOLIS_CLOUD
   device_name: soliscloud
+
+  soliscloud_username: !secret soliscloud_username
+  soliscloud_password: !secret soliscloud_password
+  soliscloud_key_id: !secret soliscloud_key_id
+  soliscloud_key_secret: !secret soliscloud_key_secret
+  soliscloud_plant_id: !secret soliscloud_plant_id
   
   battery_voltage: sensor.{device_name}_battery_voltage
-  # update_cycle_seconds: 15 
+  update_cycle_seconds: 0
   maximum_dod_percent: sensor.{device_name}_force_discharge_soc
   
   id_consumption_today: sensor.{device_name}_daily_grid_energy_used
   # id_consumption:
   #   - sensor.{device_name}_total_consumption_power
-  #   - sensor.{device_name}_backup_load_power
 
   id_grid_import_today: sensor.{device_name}_daily_grid_energy_purchased
   id_grid_export_today: sensor.{device_name}_daily_on_grid_energy
 
   id_battery_soc: sensor.{device_name}_remaining_battery_capacity
 
-  # id_grid_import_today: sensor.{device_name}_grid_import_today
-  # id_grid_export_today: sensor.{device_name}_grid_export_today
-
-  # id_battery_soc: sensor.{device_name}_battery_soc
-  # id_timed_charge_start_hours: number.{device_name}_timed_charge_start_hours
-  # id_timed_charge_start_minutes: number.{device_name}_timed_charge_start_minutes
-  # id_timed_charge_end_hours: number.{device_name}_timed_charge_end_hours
-  # id_timed_charge_end_minutes: number.{device_name}_timed_charge_end_minutes
-  # id_timed_charge_current: number.{device_name}_timed_charge_current
-
-  # id_timed_discharge_start_hours: number.{device_name}_timed_discharge_start_hours
-  # id_timed_discharge_start_minutes: number.{device_name}_timed_discharge_start_minutes
-  # id_timed_discharge_end_hours: number.{device_name}_timed_discharge_end_hours
-  # id_timed_discharge_end_minutes: number.{device_name}_timed_discharge_end_minutes
-  # id_timed_discharge_current: number.{device_name}_timed_discharge_current
-
-  # id_timed_charge_discharge_button: button.{device_name}_update_charge_discharge_times
-  # id_inverter_mode: select.{device_name}_energy_storage_control_switch
 
 # Tariff comparison
   # id_daily_solar: sensor.{device_name}_power_generation_today
