README fixes, bugfixes
Config.yaml : Correct solar confidence level naming from "solar_confidence_level" to "solcast_confidence_level"
Pv_opt.py: initialise variables earlier during startup
README.md, tweak descriptions of EV parameters.

--- a/apps/pv_opt/config/config.yaml
+++ b/apps/pv_opt/config/config.yaml
@@ -87,7 +87,7 @@ pv_opt:
   #
   # id_solcast_today: sensor.solcast_pv_forecast_forecast_today
   # id_solcast_tomorrow: sensor.solcast_pv_forecast_forecast_tomorrow
-  # solar_confidence_level: 50
+  # solcast_confidence_level: 50
   
   # ========================================
   # Consumption forecast parameters
