--- a/.github/workflows/black-check.yaml
+++ b/.github/workflows/black-check.yaml
@@ -1,21 +1,20 @@
-name: Auto-format with Black
+name: Auto-format with Black and isort
 
 on:
   push:
     branches:
-      - main  # Specify branches to run on (e.g., `main`)
+      - main
       - patch
-      - dev
-
+      - dev  # Add additional branches here as needed
   pull_request:
     branches:
-      - main  # Automatically format PRs targeting `main`
+      - main
       - patch
-      - dev
+      - dev  # Ensure formatting is applied for PRs targeting these branches
 
 jobs:
   autoformat:
-    name: Auto-format Code with Black
+    name: Auto-format Code with Black and isort
     runs-on: ubuntu-latest
 
     steps:
@@ -27,10 +26,13 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install Black
+      - name: Install Black and isort
         run: |
           python -m pip install --upgrade pip
-          pip install black
+          pip install black isort
+
+      - name: Run isort
+        run: isort .
 
       - name: Run Black Formatter
         run: black --line-length 119 .
@@ -41,7 +43,7 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           if [ -n "$(git status --porcelain)" ]; then
             git add .
-            git commit -m "Automatically formatted code with Black (line-length=119)"
+            git commit -m "Automatically formatted code with Black and isort"
             git push
           else
             echo "No changes to commit."
